@@ -1,11 +1,11 @@
 /*
 Copyright (c) DevSec Studio. All rights reserved.
 
-\file          green.qss
+\file          monogreen.qss
 \library       seq66 application
 \author        Chris Ahlstrom
 \date          2023-10-18
-\updates       2024-11-23
+\updates       2024-11-29
 \license       MIT
 
 MIT License
@@ -64,43 +64,71 @@ QComboBox
 {
     color: #00ff00;
     background-color: qlineargradient(spread:repeat, x1:1, y1:0, x2:1, y2:1, stop:0.00480769 rgba(0, 0, 0, 255),stop:0.293269 rgba(6, 40, 10, 255),stop:0.514423 rgba(8, 48, 16, 255),stop:0.745192 rgba(7, 54, 14, 255),stop:1 rgba(0, 0, 0, 255));
+    selection-background-color: #346792;
 }
+
+/*  selection-background-color: #000000; */
 
 QComboBox QAbstractItemView
 {
     background-color: qlineargradient(spread:repeat, x1:1, y1:0, x2:1, y2:1, stop:0 rgba(0, 0, 0, 255),stop:1 rgba(0, 48, 56, 255));
     color: #00ff00;
-    selection-color: #00ff00;
-    selection-background-color: #000000;
+    selection-color: #00ff80;
+    selection-background-color: #346792;
 }
 
-QComboBox::drop-down
- {
-    background: #000000
-    color: #00ff00
+QComboBox QAbstractItemView:hover
+{
+    background-color: #19232D;
+    color: #DFE1E2;
+}
+
+QComboBox QAbstractItemView:selected
+{
+    background: #346792;
+    color: #455364;
+}
+
+/*
     subcontrol-origin: padding;
     subcontrol-position: top right;
-    width: 20px;
+*/
+
+QComboBox::down-arrow
+{
+    image: url("/home/ahlstrom/.config/seq66/down.png");
+    background: #004000;
+    color: #00ff00;
     border-top-right-radius: 3px;
     border-bottom-right-radius: 3px;
 }
 
-QComboBox:editable
+QComboBox::drop-down
 {
-    background: #000000
-    color: #00ff00
+    background: #004000;
+    color: #00ff00;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+
+QComboBox:!editable
+{
+    background: #004000;
+    color: #00ff00;
     background-color: qlineargradient(spread:repeat, x1:1, y1:0, x2:1, y2:1, stop:0.00480769 rgba(0, 0, 0, 255),stop:0.293269 rgba(6, 40, 10, 255),stop:0.514423 rgba(8, 48, 16, 255),stop:0.745192 rgba(7, 54, 14, 255),stop:1 rgba(0, 0, 0, 255));
     selection-color: #00ff00;
     selection-background-color: #000000;
 }
 
-QComboBox:!editable
+QComboBox::indicator
 {
-    background: #000000
-    color: #00ff00
-    background-color: qlineargradient(spread:repeat, x1:1, y1:0, x2:1, y2:1, stop:0.00480769 rgba(0, 0, 0, 255),stop:0.293269 rgba(6, 40, 10, 255),stop:0.514423 rgba(8, 48, 16, 255),stop:0.745192 rgba(7, 54, 14, 255),stop:1 rgba(0, 0, 0, 255));
-    selection-color: #00ff00;
-    selection-background-color: #000000;
+    border: none;
+    border-radius: 0;
+    background-color: transparent;
+    selection-background-color: transparent;
+    color: transparent;
+    selection-color: transparent;
+    /* Needed to remove indicator - fix #132 */
 }
 
 QMenu
@@ -183,7 +211,7 @@ QLineEdit
 
 QLineEdit:read-only
 {
-    background-color: #808080;
+    background-color: #404040;
     color: #00ff00;
     border-style: solid;
     border-color: #141414;
