@@ -1584,6 +1584,7 @@
    \end{verbatim}
 
    Note that some themes will not respect the time-color options.
+   (This issue also occurs with other themed elements.)
 
    \texttt{swap-coordinates} allows for an alternate mapping of pattern
    numbers.  (Later, it will also apply to mappings for set-numbers and
